[package]
name = "wavexp"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.64", features = [
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"ImageData",
	"Document",
	"Element",
	"AudioDestinationNode",
	"OscillatorNode",
	"OscillatorType",
	"AnalyserNode",
	"GainNode",
	"DynamicsCompressorNode",
	"AudioContext",
	"AudioParam",
	"TextMetrics",
	"DomStringMap",
	"SvgElement",
	"AudioBuffer",
	"AudioBufferSourceNode",
	"Path2d"
]}
yew = { version = "0.20.0", features = ["csr"] }
