[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.lints.clippy]
missing_const_for_fn = "warn"
single_char_lifetime_names = "warn"
#arithmetic_side_effects = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
deref_by_slicing = "warn"
derive_partial_eq_without_eq = "warn"
expect_used = "warn"
unwrap_used = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
