[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"ImageData",
	"Document",
	"Element",
	"AudioDestinationNode",
	"OscillatorNode",
	"OscillatorType",
	"AnalyserNode",
	"GainNode",
	"AudioContext",
	"AudioParam",
	"TextMetrics",
	"DomStringMap",
	"SvgElement",
	"AudioBuffer",
	"AudioBufferSourceNode",
	"Path2d",
	"WaveShaperNode",
	"ConstantSourceNode",
	"OfflineAudioContext",
	"AudioContextOptions",
	"Performance",
	"AudioBufferOptions",
	"AudioParamMap",
	"HtmlAnchorElement",
	"OfflineAudioCompletionEvent"
]}
yew = { version = "0.20.0", features = ["csr"] }
hound = "3.5.1"
macro_rules_attribute = "0.2.0"

[workspace.lints.clippy]
unit_arg = "allow"
missing_const_for_fn = "warn"
single_char_lifetime_names = "warn"
#arithmetic_side_effects = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
deref_by_slicing = "warn"
derive_partial_eq_without_eq = "warn"
expect_used = "warn"
unwrap_used = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
